implemented transformed decoder only language model

--- a/model.ipynb
+++ b/model.ipynb
@@ -197,9 +197,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "384a6d65-daa9-4c61-a532-41a48efa4561",
+   "metadata": {},
+   "source": [
+    "# Model Architecture"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a2ff5e9-b0ed-4fb8-8939-a5f46a2b0120",
+   "id": "bf9ce5e5-c743-40b4-91ef-4441686bad3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ShakespeareModel(nn.Module):\n",
+    "    def __init__(self, vocab_size, d_model=512, nhead=8, num_layers=6, context_length=512):\n",
+    "        super(ShakespeareModel, self).__init__()\n",
+    "        \n",
+    "        self.embedding = nn.Embedding(vocab_size, d_model)\n",
+    "        self.positional_encoding = nn.Embedding(context_length, d_model)\n",
+    "        \n",
+    "        self.decoder_layer = nn.TransformerDecoderLayer(d_model=d_model, nhead=nhead)\n",
+    "        self.transformer_decoder = nn.TransformerDecoder(self.decoder_layer, num_layers=num_layers)\n",
+    "        \n",
+    "        self.fc = nn.Linear(d_model, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \n",
+    "        seq_length = x.size(1)\n",
+    "        \n",
+    "        position_indices = torch.arange(seq_length, device=x.device).unsqueeze(0).expand(x.size(0), -1)\n",
+    "        embedded = self.embedding(x) + self.positional_encoding(position_indices)\n",
+    "        \n",
+    "        output = self.transformer_decoder(embedded, embedded)\n",
+    "        \n",
+    "        output = output[:, -1, :]\n",
+    "        logits = self.fc(output)\n",
+    "        \n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e6c5991-cbae-4044-baca-f462558c9309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = len(vocab)\n",
+    "\n",
+    "model = ShakespeareModel(vocab_size, d_model=128, nhead=8, num_layers=6, context_length=512).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aee692dc-d613-459b-b1c9-af8a34459366",
    "metadata": {},
    "outputs": [],
    "source": []
