added basic training and validation loops

--- a/model.ipynb
+++ b/model.ipynb
@@ -251,6 +251,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79b27473-a563-491f-943b-64fafdf7d1c0",
+   "metadata": {},
+   "source": [
+    "# Training & Validation Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd73a641-fc01-4789-91c1-9802a2fbbdfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "leanring_rate = 1e-4\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=leanring_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "247bbedf-acee-466e-bc1c-5f42cf88e1f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch(model, dataloader, optimizer, criterion, device):\n",
+    "    \n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "\n",
+    "    progress_bar = tqdm(dataloader, desc=\"Training\")\n",
+    "    for input_context, next_tokens in progress_bar:\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        input_context = input_context.to(device)\n",
+    "        next_tokens = next_tokens.to(device)\n",
+    "        \n",
+    "        logits = model(input_context)\n",
+    "\n",
+    "        loss = criterion(logits, next_tokens)\n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        progress_bar.set_postfix(loss=f'{loss.item():.4f}')\n",
+    "\n",
+    "    avg_loss = total_loss / len(dataloader)\n",
+    "    return avg_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdb40950-8d55-498b-96d0-7bdb7c7ac766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def val_epoch(model, dataloader, criterion, device):\n",
+    "    \n",
+    "    model.eval()\n",
+    "    total_loss = 0\n",
+    "\n",
+    "    with torch.inference_mode():\n",
+    "\n",
+    "        progress_bar = tqdm(dataloader, desc=\"Validation\")\n",
+    "        for input_context, next_tokens in progress_bar:\n",
+    "            \n",
+    "            input_context = input_context.to(device)\n",
+    "            next_tokens = next_tokens.to(device)\n",
+    "            \n",
+    "            logits = model(input_context)\n",
+    "\n",
+    "            loss = criterion(logits, next_tokens)\n",
+    "            total_loss += loss.item()\n",
+    "\n",
+    "            progress_bar.set_postfix(loss=f'{loss.item():.4f}')\n",
+    "\n",
+    "    avg_loss = total_loss / len(dataloader)\n",
+    "    return avg_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4dc51be-9165-4d32-a378-e51466d43f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(model, train_loader, val_loader, criterion, device, num_epochs):\n",
+    "\n",
+    "    for epoch in range(1, num_epochs+1):\n",
+    "\n",
+    "        print(f\"Epoch - [{epoch}/{num_epochs}]\")\n",
+    "        train_loss = train_epoch(model, train_loader, optimizer, criterion, device)\n",
+    "        val_loss = val_epoch(model, val_loader, criterion, device)\n",
+    "\n",
+    "        print(\"Train Loss -\", train_loss)\n",
+    "        print(\"Val Loss -\", val_loss, \"\\n\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "aee692dc-d613-459b-b1c9-af8a34459366",
