generate fuctionality added

--- a/model.ipynb
+++ b/model.ipynb
@@ -355,6 +355,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20b1a3e7-0abd-4180-8553-555715baff64",
+   "metadata": {},
+   "source": [
+    "# Generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b2b59cb-ca2d-4f45-96fc-d3e34f255792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate(model, start_sequence, max_length=100):\n",
+    "    model.eval()\n",
+    "    \n",
+    "    with torch.inference_mode():\n",
+    "        start_tensor = torch.tensor(start_sequence, device=\"cuda\").unsqueeze(0)\n",
+    "        generated_sequence = start_tensor\n",
+    "        \n",
+    "        for _ in range(max_length):\n",
+    "            input_seq = generated_sequence\n",
+    "            logits = model(input_seq)\n",
+    "            probs = torch.softmax(logits, dim=-1)\n",
+    "            next_token = torch.multinomial(probs, num_samples=1)\n",
+    "            generated_sequence = torch.cat((generated_sequence, next_token), dim=1)\n",
+    "\n",
+    "    return generated_sequence.squeeze().cpu().numpy().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "758fccae-6320-4f3e-9c5c-50ac933ef0ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_char = \"First\"\n",
+    "start_token = [char_to_idx[char] for char in start_char]\n",
+    "\n",
+    "generated_tokens = generate(model, start_token)\n",
+    "generated_text = [idx_to_char[item] for item in generated_tokens]\n",
+    "\n",
+    "\"\".join(generated_text)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "aee692dc-d613-459b-b1c9-af8a34459366",
