exp-1 done baseline model training

--- a/model.ipynb
+++ b/model.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "384a6d65-daa9-4c61-a532-41a48efa4561",
+   "id": "598d96b5-57ea-4bca-a20a-73d073748047",
    "metadata": {},
    "source": [
     "# Model Architecture"
@@ -206,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf9ce5e5-c743-40b4-91ef-4441686bad3d",
+   "execution_count": 11,
+   "id": "287057ab-d161-4db4-9ab6-ff14433f074c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,8 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e6c5991-cbae-4044-baca-f462558c9309",
+   "execution_count": 12,
+   "id": "f40bfb6a-164c-4017-a41d-550bfd60af41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b27473-a563-491f-943b-64fafdf7d1c0",
+   "id": "76110484-e2af-4152-8496-73a863adbb54",
    "metadata": {},
    "source": [
     "# Training & Validation Loops"
@@ -260,8 +260,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd73a641-fc01-4789-91c1-9802a2fbbdfe",
+   "execution_count": 13,
+   "id": "fba77a2e-a92d-4afa-809e-71875f691413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "247bbedf-acee-466e-bc1c-5f42cf88e1f9",
+   "execution_count": 14,
+   "id": "fabf8535-f5a7-4acc-a96a-d77350d4f237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bdb40950-8d55-498b-96d0-7bdb7c7ac766",
+   "execution_count": 15,
+   "id": "37137c79-0419-4536-8376-57925cfba640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4dc51be-9165-4d32-a378-e51466d43f77",
+   "execution_count": 16,
+   "id": "b30faa03-5ae8-4e3c-8e8a-bbcd066d8667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,8 +355,212 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b320a22a-1a3a-4831-97f3-63b7c29d1357",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch - [1/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.39it/s, loss=2.5111]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.84it/s, loss=2.6042]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.7007138965606687\n",
+      "Val Loss - 2.4615018979097023 \n",
+      "\n",
+      "Epoch - [2/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.5282]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.83it/s, loss=2.4986]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.482807921218872\n",
+      "Val Loss - 2.4254854168647375 \n",
+      "\n",
+      "Epoch - [3/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.39it/s, loss=2.6347]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.76it/s, loss=2.4532]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.4573816841125486\n",
+      "Val Loss - 2.4074043127206655 \n",
+      "\n",
+      "Epoch - [4/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.4780]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.81it/s, loss=2.4897]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.4448219917297362\n",
+      "Val Loss - 2.4048970326399193 \n",
+      "\n",
+      "Epoch - [5/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.6990]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.70it/s, loss=2.4730]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.4375887310028075\n",
+      "Val Loss - 2.3992904883164625 \n",
+      "\n",
+      "Epoch - [6/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.7826]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.81it/s, loss=2.4773]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.432881823730469\n",
+      "Val Loss - 2.393252670764923 \n",
+      "\n",
+      "Epoch - [7/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.7830]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.71it/s, loss=2.4779]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.4281083366394043\n",
+      "Val Loss - 2.3906713785269322 \n",
+      "\n",
+      "Epoch - [8/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.3283]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.76it/s, loss=2.4821]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.4235934974670412\n",
+      "Val Loss - 2.399733528112754 \n",
+      "\n",
+      "Epoch - [9/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.5783]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.81it/s, loss=2.4903]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.4223732902526853\n",
+      "Val Loss - 2.3930405515890856 \n",
+      "\n",
+      "Epoch - [10/10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|████████████████████████████████████████████████| 625/625 [02:22<00:00,  4.38it/s, loss=2.2504]\n",
+      "Validation: 100%|██████████████████████████████████████████████| 156/156 [00:09<00:00, 15.82it/s, loss=2.4841]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss - 2.4192528884887694\n",
+      "Val Loss - 2.388628514913412 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_model(model, train_loader, val_loader, criterion, device, num_epochs=10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "20b1a3e7-0abd-4180-8553-555715baff64",
+   "id": "63f9e945-1a65-40ef-a4ab-a787adbeeb29",
    "metadata": {},
    "source": [
     "# Generation"
@@ -364,8 +568,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b2b59cb-ca2d-4f45-96fc-d3e34f255792",
+   "execution_count": 39,
+   "id": "e9607eb3-f23e-4d45-b2be-d32629adeefe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "758fccae-6320-4f3e-9c5c-50ac933ef0ca",
+   "id": "01554a8d-d9de-4308-aeda-a7541ebf7ac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee692dc-d613-459b-b1c9-af8a34459366",
+   "id": "6a2ff5e9-b0ed-4fb8-8939-a5f46a2b0120",
    "metadata": {},
    "outputs": [],
    "source": []
